# EASS-partA-WorkoutTracker

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  RATELIMIT_IMPLEMENTATION.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
services/api/: Dockerfile  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: a1b2c3d4e5f6_add_users_table_and_user_id_fk.py  b3c4d5e6f7a8_add_email_password_auth.py
services/api/scripts/: README.md  __init__.py  cli.py
services/api/src/: __init__.py  api.py  auth.py  etag.py
services/api/src/database/: __init__.py  config.py  database.py  db_models.py  dependencies.py  models.py  repository.py  sqlmodel_repository.py  user_repository.py
services/api/src/ratelimit/: __init__.py  config.py
services/api/tests/: test_api.py  test_auth.py  test_config.py  test_ratelimit.py  test_schemathesis.py
services/cli/: Dockerfile  __init__.py  pyproject.toml
services/cli/src/: __init__.py  cli.py
services/cli/tests/: test_cli.py
services/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml
services/frontend/src/: App.css  App.tsx  __init__.py  client.py  dashboard.py  index.css  main.tsx
services/frontend/src/api/: client.ts
services/frontend/src/components/: AICoachChat.tsx  ApiKeySettings.tsx  BottomTabs.tsx  CreateExerciseForm.tsx  EditExerciseModal.tsx  ExerciseList.tsx  Layout.tsx  LoadingSpinner.tsx  LoginPage.tsx  Metrics.tsx  RecommendationPanel.tsx  Sidebar.tsx  index.ts
services/frontend/src/contexts/: AuthContext.tsx
(+73 files in other folders)
