[project]
packages = ["src"]
[tool.hatch.build.targets.wheel]

build-backend = "hatchling.build"
requires = ["hatchling"]
[build-system]

]
    "httpx>=0.27.0",
    "pytest>=8.3.0",
dev = [
[project.optional-dependencies]

]
    "pydantic-settings>=2.0.0",
    "pydantic>=2.10.0",
    "uvicorn[standard]>=0.32.0",
    "fastapi>=0.115.0",
dependencies = [
requires-python = ">=3.12"
description = "Workout Tracker API Service"
version = "0.1.0"
name = "workout-tracker-api"

