[project]
name = "workout-tracker-frontend"
version = "0.1.0"
description = "Workout Tracker Frontend Service (Streamlit Dashboard)"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
